cedar-lean/UnitTest/parser_tests/negative/missing_eid_in_ref.cedar
permit(principal == User::, action, resource);
